--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
     <nav class="nav-container">
         <ul class="nav-items">
 
-            <li class="items logo-item"> <a href="#"> <img src="/Higa web resource/Picsart_24-09-14_15-32-19-615.png" alt=""> </a> </li>
-            <li class=" small-logo"> <a href="#"> <img src="/Higa web resource/small logo.png" alt=""> </a> </li>
+            <li class="items logo-item"> <a href="#"> <img src="./Higa web resource/Picsart_24-09-14_15-32-19-615.png" alt=""> </a> </li>
+            <li class=" small-logo"> <a href="#"> <img src="./Higa web resource/small logo.png" alt=""> </a> </li>
             
 
             <li class="items max-items"> <a href="#"> Home </a> </li>
@@ -87,25 +87,25 @@
         <div class="slideshow-container">
 
             <div class="simage">
-                <img src="/Higa web resource/174062264_2527640547544458_5776481563813922949_n.jpg" alt="">
+                <img src="./Higa web resource/174062264_2527640547544458_5776481563813922949_n.jpg" alt="">
             </div>
             <div class="simage">
-                <img src="/Higa web resource/174509192_2527640524211127_4185203435078157050_n.jpg" alt="">
+                <img src="./Higa web resource/174509192_2527640524211127_4185203435078157050_n.jpg" alt="">
             </div>
             <div class="simage">
-                <img src="/Higa web resource/D_TP-2nX4AI-2Fm.jpeg" alt="">
+                <img src="./Higa web resource/D_TP-2nX4AI-2Fm.jpeg" alt="">
             </div>
             <div class="simage">
-                <img src="/Higa web resource/D_TR3A4WsAEOn-0.jpeg" alt="">
+                <img src="./Higa web resource/D_TR3A4WsAEOn-0.jpeg" alt="">
             </div>
             <div class="simage">
-                <img src="/Higa web resource/D_TRDgBW4AMzqg8.jpeg" alt="">
+                <img src="./Higa web resource/D_TRDgBW4AMzqg8.jpeg" alt="">
             </div>
             <div class="simage">
-                <img src="/Higa web resource/D_TSyERW4AAIORy.jpeg" alt="">
+                <img src="./Higa web resource/D_TSyERW4AAIORy.jpeg" alt="">
             </div>
             <div class="theimages fade">
-                <img src="/Higa web resource/photo_2024-09-06_09-22-44.jpg" alt="">
+                <img src="./Higa web resource/photo_2024-09-06_09-22-44.jpg" alt="">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
