--- a/home.html
+++ b/home.html
@@ -18,9 +18,9 @@
 
             <li class="items logo-item"> <a href="#"> <img src="./Higa web resource/Picsart_24-09-14_15-32-19-615.png" alt=""> </a> </li>
             <li class=" small-logo"> <a href="#"> <img src="./Higa web resource/small logo.png" alt=""> </a> </li>
-            
 
-            <li class="items max-items"> <a href="#"> Home </a> </li>
+            <li class="logo-text"> <a href="#"> <h1> HMBS</h1></a> </li>
+            
 
             <li class="items about-container max-items"> 
 
@@ -62,8 +62,6 @@
 
         <ul class="side-bar-container">
 
-            <li class="side-items "> <a href="#"> Home </a> </li>
-
             <li class="side-items "> <a href="#"> About us </a> </li>
 
             <li class="side-items "> <a href="#"> Publications </a> </li>
@@ -87,10 +85,10 @@
         <div class="slideshow-container">
 
             <div class="simage">
-                <img src="./Higa web resource/174062264_2527640547544458_5776481563813922949_n.jpg" alt="">
+                <img src="./Higa web resource/1731621452690.jpg" alt="">
             </div>
             <div class="simage">
-                <img src="./Higa web resource/174509192_2527640524211127_4185203435078157050_n.jpg" alt="">
+                <img src="./Higa web resource/20241115_193637.jpg" alt="">
             </div>
             <div class="simage">
                 <img src="./Higa web resource/D_TP-2nX4AI-2Fm.jpeg" alt="">
