--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 
             <li class="side-items "> <a href="#"> Contact us </a> </li>
 
-            <li class="side-items items"> <button> Donate </button> </li>
+            <li class=" items"> <button> Donate </button> </li>
 
 
         </ul>
