--- a/home.html
+++ b/home.html
@@ -240,33 +240,24 @@
     </main>
 
 
-    <footer>
-        <div class="ffooter">
+    <footer class="the-footer">
+
+        <div class="footer-1">
             <h1> Higa Model Boarding School</h1>
-            <button> Donate</button>
+            <button> Donate </button>
         </div>
 
-        <div class="fdiv-container">
-            <div class="fdiv">
-                <h1> Test</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, accusantium nihil dicta numquam minima eum!</p>
+        <div class="footer-2">
+            <div class="f21 ff">
+                <svg viewBox="0 0 512 512" height="35px" width="35px" xmlns="http://www.w3.org/2000/svg"><path d="m502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7v204.5c0 26.5-21.5 48-48 48h-416c-26.5 0-48-21.5-48-48v-204.4c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zm-246.3 129.2c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48h-416c-26.5 0-48 21.5-48 48v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"/></svg>
             </div>
 
-            <div class="fdiv">
-                <h1> Test</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, accusantium nihil dicta numquam minima eum!</p>
+            <div class="f22 ff">
+                <svg viewBox="0 0 512 512" height="35px" width="35px" xmlns="http://www.w3.org/2000/svg"><path d="m504 256c0-137-111-248-248-248s-248 111-248 248c0 123.78 90.69 226.38 209.25 245v-173.31h-63v-71.69h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73v46.55h68.78l-11 71.69h-57.78v173.31c118.56-18.62 209.25-121.22 209.25-245z"/></svg>
             </div>
 
-            <div class="fdiv">
-                <h1> Test</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, accusantium nihil dicta numquam minima eum!</p>
-            </div>
-        </div>
-        
-
-        <div class=""> 
-            <p> HMBS Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sint commodi inventore nobis rerum doloribus optio tempore perspiciatis minus. Impedit dolore totam voluptatibus. Totam delectus pariatur voluptatem explicabo sit dolorem nesciunt vel cumque omnis.</p>
-
+            <div class="f23 ff">
+                <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="40px" height="40px"><path d="M25,2c12.703,0,23,10.297,23,23S37.703,48,25,48S2,37.703,2,25S12.297,2,25,2z M32.934,34.375	c0.423-1.298,2.405-14.234,2.65-16.783c0.074-0.772-0.17-1.285-0.648-1.514c-0.578-0.278-1.434-0.139-2.427,0.219	c-1.362,0.491-18.774,7.884-19.78,8.312c-0.954,0.405-1.856,0.847-1.856,1.487c0,0.45,0.267,0.703,1.003,0.966	c0.766,0.273,2.695,0.858,3.834,1.172c1.097,0.303,2.346,0.04,3.046-0.395c0.742-0.461,9.305-6.191,9.92-6.693	c0.614-0.502,1.104,0.141,0.602,0.644c-0.502,0.502-6.38,6.207-7.155,6.997c-0.941,0.959-0.273,1.953,0.358,2.351	c0.721,0.454,5.906,3.932,6.687,4.49c0.781,0.558,1.573,0.811,2.298,0.811C32.191,36.439,32.573,35.484,32.934,34.375z"/></svg>
         </div>
     </footer>
 
