--- a/home.html
+++ b/home.html
@@ -128,11 +128,11 @@
                 <hr class="dshr">
                 <div class="dicontainer">
                     <div class="dfirst">
-                        <h4> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusantium, architecto perferendis, molestias excepturi aliquid, officia fugit dolor quos esse numquam repellendus quidem. Quidem id ab iste consectetur a omnis vitae dolorum praesentium, repellat laboriosam nulla impedit ea dignissimos in officiis. Beatae ab ipsam dolorem magnam quisquam voluptatum vitae veritatis, at, aspernatur iusto ducimus autem ad, eum neque sunt saepe dicta cumque. Aliquam, odio officia! Earum quasi aliquam illum, alias fugit nam explicabo eum id, repudiandae vel ipsa rem repellendus? </h4>
+                        <h2> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusantium, architecto perferendis, molestias excepturi aliquid, officia fugit dolor quos esse numquam repellendus quidem. Quidem id ab iste consectetur a omnis vitae dolorum praesentium, repellat laboriosam nulla impedit ea dignissimos in officiis. Beatae ab ipsam dolorem magnam quisquam voluptatum vitae veritatis, at, aspernatur iusto ducimus autem ad, eum neque sunt saepe dicta cumque. Aliquam, odio officia! Earum quasi aliquam illum, alias fugit nam explicabo eum id, repudiandae vel ipsa rem repellendus? </h4>
                     </div>
                     <hr class="dshr2">
                     <div class="dsecond">
-                        <h4> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusantium, architecto perferendis, molestias excepturi aliquid, officia fugit dolor quos esse numquam repellendus quidem. Quidem id ab iste consectetur a omnis vitae dolorum praesentium, repellat laboriosam nulla impedit ea dignissimos in officiis. Beatae ab ipsam dolorem magnam quisquam voluptatum vitae veritatis, at, aspernatur iusto ducimus autem ad, eum neque sunt saepe dicta cumque. Aliquam, odio officia! Earum quasi aliquam illum, alias fugit nam explicabo eum id, repudiandae vel ipsa rem repellendus? </h4>
+                        <h2> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusantium, architecto perferendis, molestias excepturi aliquid, officia fugit dolor quos esse numquam repellendus quidem. Quidem id ab iste consectetur a omnis vitae dolorum praesentium, repellat laboriosam nulla impedit ea dignissimos in officiis. Beatae ab ipsam dolorem magnam quisquam voluptatum vitae veritatis, at, aspernatur iusto ducimus autem ad, eum neque sunt saepe dicta cumque. Aliquam, odio officia! Earum quasi aliquam illum, alias fugit nam explicabo eum id, repudiandae vel ipsa rem repellendus? </h4>
                     </div>
                 </div>
 
@@ -146,57 +146,76 @@
             <div class="sub-container">
                 <div class="image-teme">
                     <img src="./Higa web resource/test.jpg" alt="">
-                    <h4> Executer - Kassa Sodano</h4>
+                    <h2> Executer - Kassa Sodano</h2>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
                     <img src="./Higa web resource/test.jpg" alt="">
-                    <h4> Principal - Temegen Daniel</h4>
+                    <h2> Principal - Temegen Daniel</h2>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
                     <img src="./Higa web resource/test.jpg" alt="">
-                    <h4> Our Teachers</h4>
+                    <h2> Our Teachers</h2>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
                     <img src="./Higa web resource/test.jpg" alt="">
-                    <h4> Our Students</h4>
+                    <h2> Our Students</h2>
                 </div>
             </div>
          </div>
 
 
-
+<br> <br> <br> <br> 
          <!-- The part for the number of sudents-->
 
-         <div class="ncontainer">
+        <div class="no-container">
 
-          <div class="nscontainer">
+            <div class="no-container-2">
 
-            <div class="nscontainer">
-                <div class="nstudents nlist">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#000000"><path d="M40-160v-160q0-29 20.5-49.5T110-390h141q17 0 32.5 8.5T310-358q29 42 74 65t96 23q51 0 96-23t75-65q11-15 26-23.5t32-8.5h141q29 0 49.5 20.5T920-320v160H660v-119q-36 33-82.5 51T480-210q-51 0-97-18t-83-51v119H40Zm440-170q-35 0-67.5-16.5T360-392q-16-23-38.5-37T273-448q29-30 91-46t116-16q54 0 116.5 16t91.5 46q-26 5-48.5 19T601-392q-20 29-52.5 45.5T480-330ZM160-460q-45 0-77.5-32.5T50-570q0-46 32.5-78t77.5-32q46 0 78 32t32 78q0 45-32 77.5T160-460Zm640 0q-45 0-77.5-32.5T690-570q0-46 32.5-78t77.5-32q46 0 78 32t32 78q0 45-32 77.5T800-460ZM480-580q-45 0-77.5-32.5T370-690q0-46 32.5-78t77.5-32q46 0 78 32t32 78q0 45-32 77.5T480-580Z"/></svg>
-                    <h2> 400+</h2>
-                    <h4> Students</h4>
+
+                <div class="first-rec rec">
+
+                    <svg xmlns="http://www.w3.org/2000/svg" height="55px" viewBox="0 -960 960 960" width="55px" fill="#000000"><path d="M0-240v-53q0-38.57 41.5-62.78Q83-380 150.38-380q12.16 0 23.39.5t22.23 2.15q-8 17.35-12 35.17-4 17.81-4 37.18v65H0Zm240 0v-65q0-32 17.5-58.5T307-410q32-20 76.5-30t96.5-10q53 0 97.5 10t76.5 30q32 20 49 46.5t17 58.5v65H240Zm540 0v-65q0-19.86-3.5-37.43T765-377.27q11-1.73 22.17-2.23 11.17-.5 22.83-.5 67.5 0 108.75 23.77T960-293v53H780Zm-480-60h360v-6q0-37-50.5-60.5T480-390q-79 0-129.5 23.5T300-305v5ZM149.57-410q-28.57 0-49.07-20.56Q80-451.13 80-480q0-29 20.56-49.5Q121.13-550 150-550q29 0 49.5 20.5t20.5 49.93q0 28.57-20.5 49.07T149.57-410Zm660 0q-28.57 0-49.07-20.56Q740-451.13 740-480q0-29 20.56-49.5Q781.13-550 810-550q29 0 49.5 20.5t20.5 49.93q0 28.57-20.5 49.07T809.57-410ZM480-480q-50 0-85-35t-35-85q0-51 35-85.5t85-34.5q51 0 85.5 34.5T600-600q0 50-34.5 85T480-480Zm.35-60Q506-540 523-557.35t17-43Q540-626 522.85-643t-42.5-17q-25.35 0-42.85 17.15t-17.5 42.5q0 25.35 17.35 42.85t43 17.5ZM480-300Zm0-300Z"/></svg>
+                    <div class="rec-sub">
+                        <h3> 400+ </h3>
+                        <p> Students </p>
+                    </div>
+
                 </div>
-                <hr>
-                <div class="nteachers nlist">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#000000"><path d="M0-240v-53q0-38.57 41.5-62.78Q83-380 150.38-380q12.16 0 23.39.5t22.23 2.15q-8 17.35-12 35.17-4 17.81-4 37.18v65H0Zm240 0v-65q0-32 17.5-58.5T307-410q32-20 76.5-30t96.5-10q53 0 97.5 10t76.5 30q32 20 49 46.5t17 58.5v65H240Zm540 0v-65q0-19.86-3.5-37.43T765-377.27q11-1.73 22.17-2.23 11.17-.5 22.83-.5 67.5 0 108.75 23.77T960-293v53H780Zm-480-60h360v-6q0-37-50.5-60.5T480-390q-79 0-129.5 23.5T300-305v5ZM149.57-410q-28.57 0-49.07-20.56Q80-451.13 80-480q0-29 20.56-49.5Q121.13-550 150-550q29 0 49.5 20.5t20.5 49.93q0 28.57-20.5 49.07T149.57-410Zm660 0q-28.57 0-49.07-20.56Q740-451.13 740-480q0-29 20.56-49.5Q781.13-550 810-550q29 0 49.5 20.5t20.5 49.93q0 28.57-20.5 49.07T809.57-410ZM480-480q-50 0-85-35t-35-85q0-51 35-85.5t85-34.5q51 0 85.5 34.5T600-600q0 50-34.5 85T480-480Zm.35-60Q506-540 523-557.35t17-43Q540-626 522.85-643t-42.5-17q-25.35 0-42.85 17.15t-17.5 42.5q0 25.35 17.35 42.85t43 17.5ZM480-300Zm0-300Z"/></svg>
-                    <h2> 30+</h2>
-                    <h4> Teachers</h4>
+
+                <div class="second-rec rec">
+
+                    <svg xmlns="http://www.w3.org/2000/svg" height="55px" viewBox="0 -960 960 960" width="55px" fill="#000000"><path d="M38-160v-94q0-35 18-63.5t50-42.5q73-32 131.5-46T358-420q62 0 120 14t131 46q32 14 50.5 42.5T678-254v94H38Zm700 0v-94q0-63-32-103.5T622-423q69 8 130 23.5t99 35.5q33 19 52 47t19 63v94H738ZM358-481q-66 0-108-42t-42-108q0-66 42-108t108-42q66 0 108 42t42 108q0 66-42 108t-108 42Zm360-150q0 66-42 108t-108 42q-11 0-24.5-1.5T519-488q24-25 36.5-61.5T568-631q0-45-12.5-79.5T519-774q11-3 24.5-5t24.5-2q66 0 108 42t42 108ZM98-220h520v-34q0-16-9.5-31T585-306q-72-32-121-43t-106-11q-57 0-106.5 11T130-306q-14 6-23 21t-9 31v34Zm260-321q39 0 64.5-25.5T448-631q0-39-25.5-64.5T358-721q-39 0-64.5 25.5T268-631q0 39 25.5 64.5T358-541Zm0 321Zm0-411Z"/></svg>
+                    <div class="rec-sub">
+                        <h3> 50+ </h3>
+                        <p> Teachers</p>
+                    </div>
+
                 </div>
-              </div>
 
-          </div>
+                <div class="first-rec rec">
 
-         </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="55px" viewBox="0 -960 960 960" width="55px" fill="#000000"><path d="M433-228 295-365l42-42 96 94 184-184 42 43-226 226ZM180-80q-24 0-42-18t-18-42v-620q0-24 18-42t42-18h65v-60h65v60h340v-60h65v60h65q24 0 42 18t18 42v620q0 24-18 42t-42 18H180Zm0-60h600v-430H180v430Zm0-490h600v-130H180v130Zm0 0v-130 130Z"/></svg>
+                    <div class="rec-sub">
+                        <h3> 8 </h3>
+                        <p> Years of Experience </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+         <!--      -->
 
 
          <div class="news">
@@ -237,29 +256,35 @@
 
          </div>
 
+
+        
+
     </main>
 
+     <!------------------The footer part  -------------------------------------->
 
-    <footer class="the-footer">
-
+     <footer>
         <div class="footer-1">
-            <h1> Higa Model Boarding School</h1>
-            <button> Donate </button>
+            <h1> HMBS</h1>
+            <h4> Excellence Center ! </h4>
         </div>
 
         <div class="footer-2">
-            <div class="f21 ff">
-                <svg viewBox="0 0 512 512" height="35px" width="35px" xmlns="http://www.w3.org/2000/svg"><path d="m502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7v204.5c0 26.5-21.5 48-48 48h-416c-26.5 0-48-21.5-48-48v-204.4c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zm-246.3 129.2c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48h-416c-26.5 0-48 21.5-48 48v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"/></svg>
-            </div>
+            <p> Lorem, Lorem ipsum, adipisicing elit. Dolor, obcaecati!ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nemo corrupti vitae omnis facere placeat.</p>
+            <p> Lorem Lorem iping elit. Perspiciatis, perferendis. ipsum dolor sit, amet consectetur adipisicing elit. Aliquam labore possimus reiciendis eveniet nisi rem at esse quod dignissimos fugiat!</p>
 
-            <div class="f22 ff">
-                <svg viewBox="0 0 512 512" height="35px" width="35px" xmlns="http://www.w3.org/2000/svg"><path d="m504 256c0-137-111-248-248-248s-248 111-248 248c0 123.78 90.69 226.38 209.25 245v-173.31h-63v-71.69h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73v46.55h68.78l-11 71.69h-57.78v173.31c118.56-18.62 209.25-121.22 209.25-245z"/></svg>
-            </div>
-
-            <div class="f23 ff">
-                <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="40px" height="40px"><path d="M25,2c12.703,0,23,10.297,23,23S37.703,48,25,48S2,37.703,2,25S12.297,2,25,2z M32.934,34.375	c0.423-1.298,2.405-14.234,2.65-16.783c0.074-0.772-0.17-1.285-0.648-1.514c-0.578-0.278-1.434-0.139-2.427,0.219	c-1.362,0.491-18.774,7.884-19.78,8.312c-0.954,0.405-1.856,0.847-1.856,1.487c0,0.45,0.267,0.703,1.003,0.966	c0.766,0.273,2.695,0.858,3.834,1.172c1.097,0.303,2.346,0.04,3.046-0.395c0.742-0.461,9.305-6.191,9.92-6.693	c0.614-0.502,1.104,0.141,0.602,0.644c-0.502,0.502-6.38,6.207-7.155,6.997c-0.941,0.959-0.273,1.953,0.358,2.351	c0.721,0.454,5.906,3.932,6.687,4.49c0.781,0.558,1.573,0.811,2.298,0.811C32.191,36.439,32.573,35.484,32.934,34.375z"/></svg>
         </div>
-    </footer>
+
+        <div class="footer-3">
+            <h2> Get us on</h2>
+            <div class="subfooter-3">
+
+                
+            </div>
+        </div>
+     </footer>
+
+
 
 </body>
 </html>
