--- a/home.html
+++ b/home.html
@@ -362,6 +362,7 @@
 
                 <div class="footer-2-image">
                     <img src="./Higa web resource/small logo.png" alt="School logo" width="100px" height="100px">
+                    <img src="./Higa web resource/gogota_logo pixelcut-export-removebg-preview.png"School logo" width="100px" height="100px">
                 </div>
                     <h4> HIga Model Boarding School is a project of Gogota care, not-for-profit organization.  Higa Model Boarding School is one of the highest achieving secondary school in Central Ethiopia, Ethiopia. Our school is knows by its model students in our school and qualified teaching-learning activities with qualified teachers in our zone.</h4>
             </div>
