--- a/home.html
+++ b/home.html
@@ -145,28 +145,28 @@
          <div class="image-container">
             <div class="sub-container">
                 <div class="image-teme">
-                    <img src="./Higa web resource/test.jpg" alt="">
-                    <h4> Executer - Kassa Sodano</h4>
+                    <img src="./Higa web resource/pexels-sora-shimazaki-5668886.jpg" alt="">
+                    <h4> CEO - Kassa Sodano</h4>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
-                    <img src="./Higa web resource/test.jpg" alt="">
+                    <img src="./Higa web resource/pexels-linkedin-2182970.jpg" alt="">
                     <h4> Principal - Temegen Daniel</h4>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
-                    <img src="./Higa web resource/test.jpg" alt="">
+                    <img src="./Higa web resource/pexels-max-fischer-5212321.jpg" alt="">
                     <h4> Our Teachers</h4>
                 </div>
             </div>
 
             <div class="sub-container">
                 <div class="image-teme">
-                    <img src="./Higa web resource/test.jpg" alt="">
+                    <img src="./Higa web resource/pexels-hai-nguyen-825252-1699419.jpg" alt="">
                     <h4> Our Students</h4>
                 </div>
             </div>
