--- a/home.html
+++ b/home.html
@@ -22,13 +22,7 @@
 
             <li class="items about-container max-items"> 
 
-                <a href="#"> About us </a> 
-
-                <div class="about-items">
-                    <div> Test 1</div>
-                    <div> Test 2</div>
-                    <div> Test 3</div>
-                </div>
+                <a href="about.html"> About us </a>
                 
             </li>
 
@@ -37,12 +31,6 @@
             <li class="items gallery-container max-items"> 
 
                 <a href="#"> Gallery </a> 
-
-                <div class="gallery-items">
-                    <div> Test 1 </div>
-                    <div> Test 2 </div>
-                    <div> test 3</div>
-                </div>
 
             </li>
 
