--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
         <ul class="side-bar-container">
 
-            <li class="side-items "> <a href="#"> About us </a> </li>
+            <li class="side-items "> <a href="about.html"> About us </a> </li>
 
             <li class="side-items "> <a href="#"> Publications </a> </li>
 
