--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
         <ul class="side-bar-container">
 
-            <li class="side-items "> <a href="#"> About us </a> </li>
+            <li class="side-items "> <a href="about.html"> About us </a> </li>
 
             <li class="side-items "> <a href="#"> Publications </a> </li>
 
@@ -144,9 +144,11 @@
                     <br> 
                 </div>
 
-                <div class="about-cont-3-2">
-                    <iframe width="750" height="415" src="https://www.youtube.com/embed/WJ1dngMtxvI?si=naiu0Y6NXHi3KlP_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <div class="iframe-container"> 
+                    <iframe class="responsive-iframe1" src="https://www.youtube.com/embed/WJ1dngMtxvI?si=naiu0Y6NXHi3KlP_"></iframe>
                 </div>
+
             </div>
         </div>
 
