--- a/about.html
+++ b/about.html
@@ -148,7 +148,26 @@
                 <div class="iframe-container"> 
                     <iframe class="responsive-iframe1" src="https://www.youtube.com/embed/WJ1dngMtxvI?si=naiu0Y6NXHi3KlP_"></iframe>
                 </div>
+                
 
+            </div>
+
+            <div class="about-cont-4">
+                <div>
+                    <img src="/Higa web resource/pexels-hai-nguyen-825252-1699419.jpg" alt="">
+                </div>
+
+                <div>
+                    <img src="/Higa web resource/pexels-linkedin-2182970.jpg" alt="">
+                </div>
+
+                <div>
+                    <img src="/Higa web resource/pexels-max-fischer-5212321.jpg" alt="">
+                </div>
+
+                <div>
+                    <img src="/Higa web resource/pexels-sora-shimazaki-5668886.jpg" alt="">
+                </div>
             </div>
         </div>
 
