--- a/about.html
+++ b/about.html
@@ -154,19 +154,19 @@
 
             <div class="about-cont-4">
                 <div>
-                    <img src="/Higa web resource/pexels-hai-nguyen-825252-1699419.jpg" alt="">
+                    <img src="./Higa web resource/pexels-hai-nguyen-825252-1699419.jpg" alt="">
                 </div>
 
                 <div>
-                    <img src="/Higa web resource/pexels-linkedin-2182970.jpg" alt="">
+                    <img src="./Higa web resource/pexels-linkedin-2182970.jpg" alt="">
                 </div>
 
                 <div>
-                    <img src="/Higa web resource/pexels-max-fischer-5212321.jpg" alt="">
+                    <img src="./Higa web resource/pexels-max-fischer-5212321.jpg" alt="">
                 </div>
 
                 <div>
-                    <img src="/Higa web resource/pexels-sora-shimazaki-5668886.jpg" alt="">
+                    <img src="./Higa web resource/pexels-sora-shimazaki-5668886.jpg" alt="">
                 </div>
             </div>
         </div>
