--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                 
             </li>
 
-            <li class="items max-items"> <a href="#"> Publications </a> </li>
+            <li class="items max-items"> <a href="academics.html"> Academics </a> </li>
 
             <li class="items gallery-container max-items"> 
 
@@ -36,7 +36,7 @@
 
             <li class="items max-items"> <a href="#"> Contact us </a> </li>
 
-            <li class="items max-items"> <button> Donate </button> </li>
+            <li class="items max-items"> <button onclick="goToDonatePage()"> Donate </button> </li>
 
             <svg class="menu-button" xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
             <svg class="close-button" xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
@@ -50,13 +50,13 @@
 
             <li class="side-items "> <a href="about.html"> About us </a> </li>
 
-            <li class="side-items "> <a href="#"> Publications </a> </li>
+            <li class="side-items "> <a href="academics.html"> Academics </a> </li>
 
             <li class="side-items "> <a href="#"> Gallery </a> </li>
 
             <li class="side-items "> <a href="#"> Contact us </a> </li>
 
-            <li class=" items donate-button"> <button> Donate </button> </li>
+            <li class=" items donate-button"> <button onclick="goToDonatePage()"> Donate </button> </li>
 
 
         </ul>
